# Q9gent

./: .gitignore  API.md  CHANGELOG.md  CLAUDE_CLI_FLEXIBILITY.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DOCS.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING.md  Makefile  PROJECT_SUMMARY.md  QUICKREF.md  README.md  RELEASE_NOTES_v0.1.1.md  TESTING_SUMMARY.md  WINDOWS_DEPLOYMENT.md  WINDOWS_FIX_SUMMARY.md  WINDOWS_FIX_VERIFICATION.md  docker-compose.yml  vision.md
.github/workflows/: build.yml
src/: agent.rs  api.rs  config.rs  error.rs  main.rs  session.rs
src/session/: tests.rs
